# chatbot-tool-calling

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/config/: settings.py
app/prompts/: chat_prompt.py
app/services/: chatbot.py
app/tools/: calculator.py  datetime_tool.py  web_search.py
